deletaed unwanted files

--- a/accounts/templates/base.html
+++ b/accounts/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <title>Legal Platform</title>
     {% load static %}
-    <style>
+    <!-- <style>
 * {
     margin: 0;
     padding: 0;
@@ -189,7 +189,7 @@ input:focus, select:focus {
     input, select {
         font-size: 0.9rem;
     }
-}    </style>
+}    </style> -->
 </head>
 <body>    
     <nav>
